--- a/website_fe/src/App.css
+++ b/website_fe/src/App.css
@@ -21,11 +21,10 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #282c34;
 }
 
 @keyframes App-logo-spin {
